--- a/Lab1Activities/src/main/AndroidManifest.xml
+++ b/Lab1Activities/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.Settings"></activity>
+        <activity android:name=".Activities.Settings" android:configChanges="orientation|screenSize"></activity>
         <activity android:name=".Activities.RegisterActivity" />
         <activity android:name=".Activities.LoginActivity">
             <intent-filter>
